tests/miniJava/neg/006654_mutation.MiniJava
class java { public static void Main public int [] java ( ) { return 0 ; } ( String [ ] java ) { { } } }
